--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.15.21",
+    "dotenv": "^16.5.0",
+    "pg": "^8.16.0",
     "prompt-sync": "^4.2.0",
     "typescript": "^5.8.3"
   },
